--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "commit": "git cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "element-plus": "^2.1.9",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0",
+    "vite": "^2.9.1",
     "vue-tsc": "^0.29.8"
   }
 }
