--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "less": "^4.1.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.1",
     "vue-tsc": "^0.29.8"
