--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "cz-conventional-changelog": "^3.3.0",
     "less": "^4.1.2",
     "typescript": "^4.5.4",
