--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "bi8bo-xx_element-components",
-  "version": "1.0.1",
+  "name": "chuanqiong_element-components",
+  "version": "1.0.0",
+  "main": "./lib/index.umd.js",
+  "module": "./lib/index.es.js",
+  "style": "./lib/styles.css",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib"
   ],
@@ -19,6 +23,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "chuanqiong_element-components": "^1.0.0",
     "element-plus": "^2.1.9",
     "lodash": "^4.17.21",
     "vue": "^3.2.25",
@@ -34,5 +39,9 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.1",
     "vue-tsc": "^0.29.8"
+  },
+  "author": {
+    "name": "chuanqiong",
+    "email": "yxc900920@163.com"
   }
 }
